refactor: modifica variaveis de database e conteiner

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=users-api
 
+#Postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/baseapidb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # JWT
 jwt.secret=HWEIK973CeocFveNkfpJ4PtJHf4ncj78H4vBEaMUA5A
 jwt.expiration=86400000
