--- a/compose.yaml
+++ b/compose.yaml
@@ -2,11 +2,11 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=baseapidb'
+      - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_USER=postgres'
     ports:
-      - '5432'
+      - '5434:5432'
   rabbitmq:
     image: 'rabbitmq:latest'
     environment:
